WebApiExRateProvider 리팩터링
* Deprecated 된 API 교체 (java.net.URL -> java.net.URI)
* interface에서 구현체 로직과 관련된 예외는 throw 하는 것이 좋지 않다. 최대한 try~catch로 잡고 필요하다면 RuntimeException을 반환하는 것이 좋다.